--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.1.3",
     "isbot": "^5.1.17",
     "lucide-react": "^0.473.0",
+    "node-appwrite": "^14.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3"
