--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "dotenv": "^16.4.7",
     "isbot": "^5.1.17",
     "lucide-react": "^0.473.0",
     "node-appwrite": "^14.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "sonner": "^1.7.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.3",
