--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.473.0",
     "node-appwrite": "^14.2.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3",
-    "sonner": "^1.7.2"
+    "sonner": "^1.7.2",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.3",
